PC側邊欄scss及html結構在btn的scss (還沒做好icon轉變的程式)

--- a/src/assets/scss/components/_btn.scss
+++ b/src/assets/scss/components/_btn.scss
@@ -1,1 +1,83 @@
+//篩選按鈕側邊欄html結構
+//側邊欄主架構
+// <aside class="Sidebar">
+        //側邊欄上方動物icon
+//     <img class="Sidebar_icon" src="@/assets/images/park/pk_Sidebar_icon_crab.png" alt="螃蟹icon">
 
+        //ul裡面的li是主要存放按鈕的區塊
+//     <ul class="Sidebar_filter_btns">
+//         <li class="filter_btn_item">
+//         <img src="@/assets/images/park/pk_filter_icon_Overview.svg" alt="篩選icon">
+//         <p class="pcInnerText">園區總攬</p>
+//         </li>
+        
+        //導引按鈕(我還沒讓它收起來時可以自動變icon)
+//     <div class="Sidebar_guide">   
+//         <img  src="@/assets/images/park/pk_Sidebar_guide_icon.svg" alt="導引icon">
+//     </div>
+// </aside>
+
+//篩選按鈕側邊欄scss
+.Sidebar{
+    display: flex;
+    gap: 10px;
+    align-items: center;
+    position: absolute;
+    top: 228px;
+    left: -261px;
+    transition: 0.3s;
+    @media (max-width:1746px) {
+        left: -237px;
+    }
+    @media (max-width:1536px) {
+        left: -208px;
+    }
+    @media (max-width:1280px) {
+        left: -174px;
+    }
+    &:hover{
+        transition: 0.3s;
+        left: 0px;
+    }
+    .Sidebar_icon{
+        position: absolute;
+        top: -60px;
+        right: 70px;
+        width: 4.2vw;
+    }
+    .Sidebar_filter_btns{
+        display: flex;
+        flex-direction: column;
+        gap: 5px;
+        .filter_btn_item{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 19px;
+            width: 13.6vw;
+            height: 6.2vh;
+            background-color: $bgColorSecGray;
+            color: $mainTextColor;
+            &:hover{
+                cursor: pointer;
+                color: $primaryColorGreen;
+            }
+            img{
+                width: 1.47vw;
+                height: 2.5vh;
+            }
+        }
+    }
+    .Sidebar_guide{
+        width: 3.31vw;
+        height: 6.01vh;
+        background-color: $bgColorSecGray;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        img{
+            width: 1.1vw;
+            height: 3.7vh;
+        }
+    }
+}  
