--- a/src/assets/scss/components/_btn.scss
+++ b/src/assets/scss/components/_btn.scss
@@ -12,128 +12,117 @@ $Sidebar_icon_rigth: 70px;
 //         <img src="@/assets/images/park/pk_filter_icon_Overview.svg" alt="篩選icon">
 //         <p class="pcInnerText">園區總攬</p>
 //         </li>
-        
-        //導引按鈕
-//     <div :class="['Sidebar_guide', { 'Sidebar_guide_rotate': hover }]">   
+
+//導引按鈕(我還沒讓它收起來時可以自動變icon)
+//     <div class="Sidebar_guide">
 //         <img  src="@/assets/images/park/pk_Sidebar_guide_icon.svg" alt="導引icon">
 //     </div>
 // </aside>
 
 //篩選按鈕側邊欄scss
 .Sidebar {
-    display: flex;
-    gap: 10px;
-    align-items: center;
-    position: absolute;
-    top: 228px;
-    left: -261px;
-    transition: 0.3s;
-    @media (max-width: 1746px) {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  position: absolute;
+  top: 228px;
+  left: -261px;
+  transition: 0.3s;
+  @media (max-width: 1746px) {
     left: -237px;
-    }
-    @media (max-width: 1536px) {
+  }
+  @media (max-width: 1536px) {
     left: -210px;
-    }
-    @media (max-width: 1280px) {
+  }
+  @media (max-width: 1280px) {
     left: -178px;
-    }
-    &:hover {
+  }
+  &:hover {
     transition: 0.3s;
     left: 0px;
+  }
+  .Sidebar_icon {
+    position: absolute;
+    top: $Sidebar_icon_top;
+    right: $Sidebar_icon_rigth;
+    width: 4.2vw;
+    @media (max-width: 1746px) {
+      top: $Sidebar_icon_top * 0.91;
+      right: $Sidebar_icon_rigth * 0.91;
     }
-    .Sidebar_icon {
-        position: absolute;
-        top: $Sidebar_icon_top;
-        right: $Sidebar_icon_rigth;
-        width: 4.2vw;
-        @media (max-width: 1746px) {
-            top: $Sidebar_icon_top * 0.91;
-            right: $Sidebar_icon_rigth * 0.91;
-        }
-        @media (max-width: 1536px) {
-            top: $Sidebar_icon_top * 0.8;
-            right: $Sidebar_icon_rigth * 0.8;
-        }
-        @media (max-width: 1280px) {
-            top: $Sidebar_icon_top * 0.66;
-            right: $Sidebar_icon_rigth * 0.66;
-        }
+    @media (max-width: 1536px) {
+      top: $Sidebar_icon_top * 0.8;
+      right: $Sidebar_icon_rigth * 0.8;
     }
-    .Sidebar_filter_btns {
-        display: flex;
-        flex-direction: column;
-        gap: 5px;
-        .filter_btn_item {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            gap: 19px;
-            width: 13.6vw;
-            height: 6.2vh;
-            background-color: $bgColorSecGray;
-            color: $mainTextColor;
-            &:hover {
-            cursor: pointer;
-            color: $primaryColorGreen;
-            }
-            img {
-            width: 1.47vw;
-            height: 2.5vh;
-            }
+    @media (max-width: 1280px) {
+      top: $Sidebar_icon_top * 0.66;
+      right: $Sidebar_icon_rigth * 0.66;
     }
+  }
+  .Sidebar_filter_btns {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    .filter_btn_item {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 19px;
+      width: 13.6vw;
+      height: 6.2vh;
+      background-color: $bgColorSecGray;
+      color: $mainTextColor;
+      &:hover {
+        cursor: pointer;
+        color: $primaryColorGreen;
+      }
+      img {
+        width: 1.47vw;
+        height: 2.5vh;
+      }
     }
-    .Sidebar_guide {
-        width: 3.31vw;
-        height: 6.01vh;
-        background-color: $bgColorSecGray;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        img {
-            width: 1.1vw;
-            height: 3.7vh;
-        }
-        .Sidebar_filter_btns{
-            display: flex;
-            flex-direction: column;
-            gap: 5px;
-            .filter_btn_item{
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                gap: 19px;
-                width: 13.6vw;
-                height: 6.2vh;
-                background-color: $bgColorSecGray;
-                color: $mainTextColor;
-                &:hover{
-                    cursor: pointer;
-                    color: $primaryColorGreen;
-                }
-                img{
-                    width: 1.47vw;
-                    height: 2.5vh;
-                }
-            }
+  }
+  .Sidebar_guide {
+    width: 3.31vw;
+    height: 6.01vh;
+    background-color: $bgColorSecGray;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    img {
+      width: 1.1vw;
+      height: 3.7vh;
     }
-    .Sidebar_guide{
-        width: 3.31vw;
-        height: 6.01vh;
-        background-color: $bgColorSecGray;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        img{
-            width: 1.1vw;
-            height: 3.7vh;
-        }
-        &:hover{
-            cursor: pointer;
-        }
-    }
-}
+  }
 }
 
-.Sidebar_guide_rotate {
-    transform: rotate(180deg);
+//按鈕scss(沒有icon版本)
+
+//html結構
+// <button class="defaultBtn pcInnerText">
+// (這邊輸入按鈕的文字)
+// <img src="@/assets/images/login/icon/btnArrow.svg" alt="" />
+// </button>
+
+//css樣式
+.defaultBtn {
+  position: relative;
+  border: 2px solid $mainTextColor;
+  box-shadow: 4px 4px 0 $mainTextColor;
+  width: 120px;
+  height: 35px;
+  text-align: center;
+  cursor: pointer;
+  background-color: $bgColorWhite;
+  color: $mainTextColor;
+  &:hover {
+    background-color: $primaryColorYellow;
+  }
+  img {
+    position: absolute;
+    width: 8px;
+    height: 8px;
+    bottom: 3px;
+    right: 3px;
+  }
 }
