alter 404 scss, create common.js and add goHomefunction in it, create input.scss and import into style.scss

--- a/src/assets/scss/page/notFound.scss
+++ b/src/assets/scss/page/notFound.scss
@@ -1,3 +1,11 @@
-div.notFound{
+.notFound{
     height: 80vh;
+    background-color: $bgColorSecGray;
+    text-align: center;
+    h1{
+        color: $secColorOrange;
+        
+        padding: 20vh 0 10vh;
+    }
+
 }
