--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -16,6 +16,7 @@
 @import "components/table";
 @import "components/card";
 @import "components/form";
+@import "components/input";
 
 //layout
 @import "layout/header";
