--- a/src/assets/scss/page/ticket.scss
+++ b/src/assets/scss/page/ticket.scss
@@ -56,6 +56,23 @@
     .important{
         color: $secColorblue;
     }
+    input[type=number]::-webkit-inner-spin-button, 
+    input[type=number]::-webkit-outer-spin-button { 
+        -webkit-appearance: none;
+        margin: 0; 
+    }
+    input[type=number] {
+        -moz-appearance:textfield;
+    }
+    input, .countBTN>button{
+        height: 35px;
+        border: 2px solid $mainTextColor;
+        vertical-align: bottom;
+        background-color: $bgColorWhite;
+    }
+    input{
+        padding-inline: 8px;
+    }
 }
 .tickStep{
     width: 100%;
@@ -67,11 +84,32 @@
 };
 .tickBtn{
     width: 100%;
+    justify-content: end;
     button{ margin: 44px 0; }
-    .tickLBtn{
-        margin-right: 0;}
+    .tickLBtn{ margin-right: 0;}
 }
+.price{
+    gap: 20px;
+    margin-top: 20px;
+    justify-content: end;
+    align-items: flex-end;
+    text-align: right;
 
+
+    span{ color: $mainTextColor; }
+    :nth-child(2){
+        width: 180px;
+    }
+    .mixedFont>*{
+        display: inline-block;
+        font-weight: 700;
+    }
+}
+.firstLine{
+    border-top: 2px solid #3f3f3f;
+    padding-top: 20px;
+    margin-top: 44px;
+}
 
 // part0 購票須知(TickInfo.vue)
 .tickInfo{
@@ -169,43 +207,42 @@
     >div{
         gap: 20px;
     }
-    .tickOptionPC{
-        display: grid;
-        grid-template-columns: repeat(5,1fr);
-        max-width: 100%; /* 父層的最大寬度為100% */
-        max-height: 80vh; /* 父層的最大高度為100視窗高度 */
-        input{
-            width: 100%;
-        }
-        img{
-            width: 100%;
-            height: auto;
-            margin-bottom: 20px;
+}
+
+.countBTN{
+    justify-content: center;
+    input{
+        width: 60px;
+        text-align: right;
+    }
+    button{
+        // position: relative;
+        width: 44px;
+        text-align: center;
+        cursor: pointer;
+        color: $mainTextColor;
+        font-size: $pcFontH5;
+        font-family: $decorateFont;
+        font-weight: 500;
+        &:hover {
+            background-color: $primaryColorYellow;
         }
     }
 }
-.price{
-    gap: 20px;
-    margin-top: 20px;
-    justify-content: end;
-    align-items: flex-end;
-    text-align: right;
+.tickOption.PC{
+    display: grid;
+    grid-template-columns: repeat(5,1fr);
+    max-width: 100%; /* 父層的最大寬度為100% */
+    max-height: 80vh; /* 父層的最大高度為100視窗高度 */
+    img{
+        width: 100%;
+        height: auto;
+        margin-bottom: 20px;
+    }
+}
 
 
-    span{ color: $mainTextColor; }
-    :nth-child(2){
-        width: 180px;
-    }
-    .mixedFont>*{
-        display: inline-block;
-        font-weight: 700;
-    }
-}
-.firstLine{
-    border-top: 2px solid #3f3f3f;
-    padding-top: 20px;
-    margin-top: 44px;
-}
+
 // part3 付款頁
 .tickPayway, .tickFinished{
     margin-top: 44px;
