create  member light box

--- a/src/assets/scss/components/_btn.scss
+++ b/src/assets/scss/components/_btn.scss
@@ -96,7 +96,7 @@ $Sidebar_icon_rigth: 70px;
   }
 }
 
-.Sidebar_guide_rotate{
+.Sidebar_guide_rotate {
   transform: rotate(180deg);
 }
 
@@ -131,4 +131,57 @@ $Sidebar_icon_rigth: 70px;
   }
 }
 
+//含有icon的按鈕
 
+//html結構
+
+// <button class="iconBtn pcInnerText">
+//       <p class="iconText">
+//圖片src改成自己的
+//         <img
+//           src="@/assets/images/login/icon/comment.svg"
+//           alt=""
+//           class="buttonIcon"
+//         />
+//         (這邊輸入按鈕的文字)
+//       </p>
+//       <img
+//         src="@/assets/images/login/icon/btnArrow.svg"
+//         alt=""
+//         class="arrowIcon"
+//       />
+//     </button>
+
+//css樣式
+.iconBtn {
+  position: relative;
+  border: 2px solid $mainTextColor;
+  box-shadow: 4px 4px 0 $mainTextColor;
+  width: 120px;
+  height: 35px;
+  cursor: pointer;
+  background-color: $bgColorWhite;
+  color: $mainTextColor;
+  &:hover {
+    background-color: $primaryColorYellow;
+  }
+  .arrowIcon {
+    position: absolute;
+    width: 8px;
+    height: 8px;
+    bottom: 3px;
+    right: 3px;
+  }
+  .iconText {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    padding: 0 1vw;
+    gap: 0.7vw;
+    align-items: center;
+    .buttonIcon {
+      width: 20px;
+      height: 20px;
+    }
+  }
+}
