--- a/src/assets/scss/layout/_login_light_box.scss
+++ b/src/assets/scss/layout/_login_light_box.scss
@@ -16,7 +16,7 @@
     border-radius: 42px 42px 0 0;
     background-color: $primaryColorYellow;
     width: 100%;
-    height: 15%;
+    height: 20%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -30,14 +30,14 @@
       height: 30px;
       position: absolute;
       right: 2vw;
-      top: 1.5vw;
+      top: 2vw;
     }
   }
   .LBInputArea {
     z-index: 3;
     padding-top: 30px;
-    width: 80%;
-    height: 60%;
+    width: 70%;
+    height: 55%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -66,9 +66,11 @@
       input {
         border: 2px solid $mainTextColor;
         border-left: transparent;
-        width: 80%;
+        width: 100%;
+        padding: 3px 0 0 5px;
         &::placeholder {
-          padding: 5px;
+          width: 100%;
+          height: 100%;
           color: $inputTextColor;
           font-size: $pcFontH4;
           font-family: $font;
@@ -89,6 +91,6 @@
     justify-content: space-evenly;
     align-items: center;
     height: 25%;
-    width: 100%;
+    width: 80%;
   }
 }
